# mini

./: .clang-tidy  .gitignore  CMakeLists.txt  ROADMAP.md  main.cpp  readme.md
changelogs/: 01-08-2024.md  01-09-2024.md  13-07-2024.md  16-08-2024.md  19-07-2024.md  23-08-2024.md  24-07-2024.md  26-08-2024.md  28-07-2024.md  30-08-2024.md
docs/reference/: traits.md
minilang/: AstPrinter.h  AstPriter.cpp  Enviroment.cpp  Enviroment.h  Interpreter.cpp  Interpreter.h  Mini.cpp  Mini.h  MiniCallable.h  MiniClass.cpp  MiniClass.h  MiniFunction.cpp  MiniFunction.h  MiniInstance.cpp  MiniInstance.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  Return.h  RuntimeError.h  Scanner.cpp  Scanner.h  TimeCall.cpp  TimeCall.h  Token.cpp  Token.h  TokenType.h  main.cpp
rewrite/: CallFrame.h  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Expr.h  Function.cpp  Function.h  Lexer.cpp  Lexer.h  Module.cpp  Module.h  ModuleReader.cpp  ModuleReader.h  OpCode.h  Parser.cpp  Parser.h  Program.cpp  Program.h  Stmt.h  Token.h  VM.cpp  VM.h  Value.h  common.h  conversions.cpp  conversions.h  debug.h  main.cpp  reference.bite  types.h
scripts/: run_tests.py
source/: Analyzer.cpp  Analyzer.h  Ast.h  AstVisitor.h  CallFrame.h  Compiler.cpp  Compiler.h  Diagnostics.cpp  Diagnostics.h  Expr.h  Function.cpp  Function.h  GarbageCollector.cpp  GarbageCollector.h  Lexer.cpp  Lexer.h  ModuleReader.cpp  ModuleReader.h  Object.cpp  Object.h  OpCode.h  Parser.cpp  Parser.h  Program.h  Stmt.h  Token.h  VM.cpp  VM.h  Value.cpp  Value.h  common.h  conversions.cpp  core_module.cpp  core_module.h  debug.h  main.cpp  types.h
source/api/: enchance_messages.h  enhance_messages.h
source/base/: bitflags.h  box.h  chars.h  common.h  debug.h  hash.h  logger.h  overloaded.h  perfect_map.h  print.h  stream.h  unicode.h  unordered_dense.h
source/parser/: CompilationMessage.h  ErrorPrettyPrinter.h  InputStream.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  conversions.cpp  conversions.h  perfect_map.h
source/shared/: Message.h  SharedContext.cpp  SharedContext.h  StringTable.h
tests/classes/: class_abstract.bite  class_abstract_nested.bite  class_constructor.bite  class_constructor.out  class_getset_abstract.bite  class_getset_abstract.out  class_getset_inheritance.bite  class_getset_inheritance.out  class_getset_member.bite  class_getset_member.out  class_getset_mixed_inheritance.bite  class_getset_mixed_inheritance.out  class_getset_out.bite  class_getset_partial_inheritance.bite  class_getset_partial_inheritance.out  class_getset_simple.bite  class_methods.bite  class_methods.out  class_methods_hoist.bite  class_methods_hoist.out  class_methods_with_state.bite  class_methods_with_state.out  class_object.bite  class_simple.bite  class_simple.out  class_statics.bite  class_super_constructor.bite  class_super_constructor.out  class_super_constructor_nested.bite  class_super_constructor_nested.out  implicit_this.bite  implicit_this.out
tests/closures/: closure_should_box.bite  closure_should_box.out  closure_should_reference.bite  closure_should_reference.out  multi_level_closure.bite  simple_closure.bite
tests/control_flow/: for.bite  for.out  if_expressions.bite  if_expressions.out  if_statements.bite  if_statements.out  labeled_blocks.bite  loop.bite  loop.out  while.bite  while.out
tests/modules/: modules_import.bite  modules_import_path.bite  modules_import_path_rename.bite  modules_import_rename.bite  modules_simple.bite
tests/objects/: object_anon.bite  object_anon.out  object_inherit.bite  object_inherit.out  object_inherit_abstract.bite  object_simple.bite  object_simple.out
tests/operators/: null_coalescing.bite  null_coalescing.out  optional_chaining.bite  optional_chaining.out
tests/traits/: traits_class_compose.bite  traits_excluding.bite  traits_field.bite  traits_field.out  traits_getset.bite  traits_getset.out  (+3 more)
tools/: GenerateMiniAst.cpp
vm/: Chunk.h  Compiler.cpp  Compiler.h  Instruction.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  VM.cpp  VM.h  Value.cpp  Value.h  debug.h  main.cpp  value.h
